# qapitol-evals-kit

./: .gitignore  LICENSE  README.md  agent.md  pyproject.toml
.cursor/rules/: context7-deps.mdc  git-identity.mdc  no-secrets.mdc  python-standards.mdc  qapitol-evals-core.mdc
.cursor/skills/qapitol-evals-github/: SKILL.md
.cursor/skills/qapitol-evals-test/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: BATCH_AND_TRACES.md  CI.md  RELEASING.md  USAGE.md
examples/: 01_basic_code.py  02_rag_mock.py  03_agent_smoke.py  04_batch_jsonl.py  05_multiturn.py
examples/data/: sample_traces.jsonl
scripts/: install-git-hooks.sh  verify-git-identity.sh
scripts/git-hooks/: prepare-commit-msg
src/qapitol/: __init__.py
src/qapitol/evals/: __init__.py  base.py  batch.py  cli.py  conversation.py  io.py  runner.py  score.py  testing.py
src/qapitol/evals/evaluators/: __init__.py  code.py  llm_judge.py
src/qapitol/evals/llm/: __init__.py  wrapper.py
src/qapitol/evals/prompts/: __init__.py  templates.py
tests/: conftest.py  test_batch.py  test_cli.py  test_code_evaluators.py  test_conversation.py  test_io.py  test_llm_mock.py  test_runner.py  test_score.py
