[project]
name = "qapitol-evals-kit"
version = "0.1.0"
description = "Local BYOK LLM and RAG evaluation metrics (Qapitol Evals Kit)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "evaluation", "rag", "metrics"]
authors = [{ name = "Qapitol" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.5",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
all = ["openai>=1.0", "anthropic>=0.18"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
qapitol-evals = "qapitol.evals.cli:main"

[project.urls]
Homepage = "https://github.com/QapitolAI/qapitol-evals-kit"
Documentation = "https://github.com/QapitolAI/qapitol-evals-kit#readme"
Repository = "https://github.com/QapitolAI/qapitol-evals-kit"
Issues = "https://github.com/QapitolAI/qapitol-evals-kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qapitol"]

[tool.hatch.build.targets.sdist]
only-include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "live: hits real LLM APIs (requires QAPITOL_EVALS_LIVE=1 and API keys)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/qapitol/evals/prompts/templates.py" = ["E501"]
